--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -269,7 +269,7 @@ html, body {
   background: -webkit-linear-gradient(rgba(123, 38, 116, 0.8), rgba(123, 38, 116, 0.8)), url('../images/hero-image.jpg');
   background-size: cover;
   background-repeat: no-repeat;
-  /*background-attachment: fixed;*/
+  background-position: center center;
 }
 
 
