--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -167,14 +167,14 @@ html, body {
   padding-bottom: 40px;
 }
 
-@media ("max-width: 900px") {
+@media (max-width: 900px) {
   #swappable-title{
     font-size: 40px;
   }
 }
 
 
-@media ("max-width: 630px") {
+@media (max-width: 630px) {
   #swappable-title{
     font-size: 35px;
   }
@@ -266,7 +266,7 @@ html, body {
 
 .navbar-brand {
 	float: left;
-    width: 70%;
+    width: 60%;
     height: 50px;
     padding: 20px 10px;
     line-height: 12px;
