Set width for navbar logo

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -197,6 +197,10 @@ html, body {
   height: auto !important;
 }
 
+.navbar-brand img{
+	width: 100%;
+}
+
 
 .navbar-nav li a {
   color: #2d2d2d !important;
