--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -561,6 +561,16 @@ html, body {
   text-shadow: 1px 1px 2px rgba(0, 0, 0, .8);
 }
 
+#cta-headline a {
+  color: #f8bc3b;
+  text-decoration: none;
+}
+
+#cta-headline a:hover {
+  color: #dea62e;
+}
+
+
 #cta-button a:hover{
   color: #601d5a;
   text-decoration: none;
