--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -561,12 +561,12 @@ html, body {
   text-shadow: 1px 1px 2px rgba(0, 0, 0, .8);
 }
 
-#cta-headline a {
+#cta-headline p a {
   color: #f8bc3b;
   text-decoration: none;
 }
 
-#cta-headline a:hover {
+#cta-headline p a:hover {
   color: #dea62e;
 }
 
